process explorer from celonis, Slide effect on toggle and optimized UI

--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -8,7 +8,7 @@
 
 <!---START BODY--->
 
-<body>
+<body class="iframe-state panel-hidden">
   <div class="panel">
     <span id="sidebar-arrow" class="panel__icon panel__icon_opened">
       <img src="/img/icon-sidebar.svg" alt="">
@@ -38,11 +38,11 @@
               </tr>
               <tr>
                 <td class="bold-table-column"> Name </td>
-                <td>salesforce.com - 200 Widgets</td>
+                <td>salesforce.com - 1200 Widgets</td>
               </tr>
               <tr>
                 <td class="bold-table-column"> ID </td>
-                <td> 0061t0000050e4EAAQ </td>
+                <td> 0061t0000050e48AAA </td>
               </tr>
             </table>
           </div>
@@ -95,7 +95,8 @@
           </nav>
           <div class="sub-content-block">
             <i>57 cases within your salesforce organisation analyzed</i>
-            <img src="img/process-flow.jpg" alt="" width="100%">
+            <!-- img src="img/process-flow.jpg" alt="" width="100%"-->
+            <iframe src="https://cdtm.eu-1.celonis.cloud/process-mining/public/b0bc7039-168b-4fb8-92d7-6384583b22a9/#/frontend/documents/b0bc7039-168b-4fb8-92d7-6384583b22a9/view" height="600" width="450" style="border-style:solid;border-width:1px; border-color:#ddd;"></iframe>
             <!-- SUGGESTED NEXT STEPS -->
             <div class="sub-content-block">
               <table>
