update event handling

--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -125,6 +125,25 @@
           <!-- FIND A COLLEAGUE -->
           <div id="content-block-colleague" class="sub-content-block content-block_visible">
             <div class="sub-content-block">
+              <img src="img/colleague.jpg" class="colleague-foto" alt="">
+              <div class="contact-box">
+                <h5> Matthis Proud, Account Execitive</h5>
+                <i> Has already experienced 48 cases with comparable prospects from your current one </i>
+                <table>
+                  <tr>
+                    <td>Phone</td>
+                    <td> +49 282 2182 102</td>
+                  </tr>
+                  <tr>
+                    <td>Mail</td>
+                    <td> matthis.proud@global-product.com</td>
+                  </tr>
+                  <tr>
+                    <td>Skype:</td>
+                    <td> proud_matthis </td>
+                  </tr>
+                </table>
+              </div>
 
 
             </div>
