--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -49,7 +49,6 @@
           <!--- Filter opportunities for process explorer --->
           <div id="filter-block" class="sub-content-block">
             <table>
-              <i> Filter setting:</i>
               <tr>
                 <td class="bold-table-column"> Industry </<td>
                 <td>
@@ -94,9 +93,9 @@
             <a id="tab-colleague" class="panel-main__menu-tab panel-main__menu-tab_invisible">Colleagues</a>
           </nav>
           <!---PROCESS EXPLORER--->
-          <div id="content-block-process" class="sub-content-block content-block_invisible">
+          <div id="content-block-process" class="sub-content-block content-block_visible">
             <i>57 cases within your salesforce organisation analyzed</i>
-            <iframe src="https://cdtm.eu-1.celonis.cloud/process-mining/public/b0bc7039-168b-4fb8-92d7-6384583b22a9/#/frontend/documents/b0bc7039-168b-4fb8-92d7-6384583b22a9/view" height="600" width="450" style="border-style:solid;border-width:1px; border-color:#ddd;"></iframe>
+            <iframe src="https://cdtm.eu-1.celonis.cloud/process-mining/public/b0bc7039-168b-4fb8-92d7-6384583b22a9/#/frontend/documents/b0bc7039-168b-4fb8-92d7-6384583b22a9/view" height="500" width="400" style="border-style:solid;border-width:1px; border-color:#ddd;"></iframe>
             <!-- SUGGESTED NEXT STEPS -->
             <div class="sub-content-block">
               <table>
@@ -113,44 +112,58 @@
                   <td> <input type="checkbox" name="next-step" value="next-step-2"> Next Step 2 </td>
                   <td> 47% </td>
                 </tr>
-                <tr class="next-steps">
-                  <td> <input type="checkbox" name="next-step" value="next-step-3"> Next Step 3 </td>
-                  <td> 43% </td>
-                </tr>
               </table>
               <button id="create-task" class="button-next-steps" type="button" name="button"> Create tasks</button>
               <button id="find-colleagues" class="button-next-steps" type="button" name="button"> Find colleagues</button>
             </div>
           </div>
           <!-- FIND A COLLEAGUE -->
-          <div id="content-block-colleague" class="sub-content-block content-block_visible">
+          <div id="content-block-colleague" class="sub-content-block content-block_invisible">
             <div class="sub-content-block">
-              <img src="img/colleague.jpg" class="colleague-foto" alt="">
-              <div class="contact-box">
-                <h5> Matthis Proud, Account Execitive</h5>
-                <i> Has already experienced 48 cases with comparable prospects from your current one </i>
-                <table>
-                  <tr>
-                    <td>Phone</td>
-                    <td> +49 282 2182 102</td>
-                  </tr>
-                  <tr>
-                    <td>Mail</td>
-                    <td> matthis.proud@global-product.com</td>
-                  </tr>
-                  <tr>
-                    <td>Skype:</td>
-                    <td> proud_matthis </td>
-                  </tr>
-                </table>
-              </div>
-
-
+              <p class="meta-description-colleague"> Recommended expert: Ask for advise within your organisation</p>
+              <hr>
+              <!-- RECOMMENDED EXPERT -->
+              <table>
+                <tr id="td-image-column">
+                  <td>
+                    <img src="img/colleague.jpg" class="colleague-foto" alt="">
+                  </td>
+                  <td id="td-text-column">
+                    <div class="contact-box">
+                      <h5> Matthis Proud, Account Execitive</h5>
+                      <i> 48 cases comparable cases </i>
+                      <table>
+                        <tr >
+                          <td>Phone</td>
+                          <td> <a id="call-action">+49 15770362155</a></td>
+                        </tr>
+                        <tr>
+                          <td>Mail</td>
+                          <td> <a id="mail-action"> matthis.proud@global-product.com</a></td>
+                        </tr>
+                        <tr>
+                          <td>Skype:</td>
+                          <td> proud_matthis </td>
+                        </tr>
+                      </table>
+                    </div>
+                  </td>
+                </tr>
+              </table>
             </div>
+            <hr>
+            <!-- OTHER EXPERTS LONG LIST -->
+            <p class="meta-description-colleague"> Other porential helpfull colleagues</p>
+            <ul>
+              <li> Patrick Three, Account Manager, 38 cases</li>
+              <li> Kaya Maya, Sales specialist, 31 cases </li>
+              <li> Lucifer Rieder, Business Development, 22 cases</li>
+              <li> Marissa Elisabeth, Junior Sales Rep, 21 cases</li>
+              <li> Yasa Mama, Sales Trainee, 15 cases </li>
+            </ul>
+            <button id="colleague-back" class="button-next-steps" type="button" name="button">Back</button>
           </div>
-
         </div>
-
       </div>
     </div>
 
