--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -74,8 +74,8 @@
                 <td class="bold-table-column"> Region </<td>
                 <td>
                   <select>
-                    <option value="Medium">NORAM</option>
                     <option value="Large">EMEA</option>
+                    <option value="Medium">NORAM</option>
                     <option value="">APAC</option>
                     <option value="">LATAM</option>
                   </select>
@@ -94,7 +94,7 @@
           </nav>
           <!---PROCESS EXPLORER--->
           <div id="content-block-process" class="sub-content-block content-block_visible">
-            <i>57 cases within your salesforce organisation analyzed</i>
+            <i #> 90k cases within your salesforce organisation analyzed</i>
             <iframe src="https://cdtm.eu-1.celonis.cloud/process-mining/public/b0bc7039-168b-4fb8-92d7-6384583b22a9/#/frontend/documents/b0bc7039-168b-4fb8-92d7-6384583b22a9/view" height="500" width="400" style="border-style:solid;border-width:1px; border-color:#ddd;"></iframe>
             <!-- SUGGESTED NEXT STEPS -->
             <div class="sub-content-block">
@@ -105,12 +105,12 @@
                   <td class="bold-table-column"> Performance Score </td>
                 </tr>
                 <tr class="next-steps">
-                  <td> <input type="checkbox" name="next-step" value="next-step-1"> Next Step 1 </td>
-                  <td> 56% </td>
+                  <td> <input type="checkbox" name="next-step" value="next-step-1"> Calculate Detailed Business Case </td>
+                  <td> 46% </td>
                 </tr>
                 <tr class="next-steps">
-                  <td> <input type="checkbox" name="next-step" value="next-step-2"> Next Step 2 </td>
-                  <td> 47% </td>
+                  <td> <input type="checkbox" name="next-step" value="next-step-2"> Switch Key Stakeholder </td>
+                  <td> 27% </td>
                 </tr>
               </table>
               <button id="create-task" class="button-next-steps" type="button" name="button"> Create tasks</button>
@@ -120,7 +120,7 @@
           <!-- FIND A COLLEAGUE -->
           <div id="content-block-colleague" class="sub-content-block content-block_invisible">
             <div class="sub-content-block">
-              <p class="meta-description-colleague"> Recommended expert: Ask for advise within your organisation</p>
+              <p class="meta-description-colleague"> 🕵🏼‍ <b>Recommended expert:</b> Ask for advise within your organisation</p>
               <hr>
               <!-- RECOMMENDED EXPERT -->
               <table>
@@ -130,20 +130,20 @@
                   </td>
                   <td id="td-text-column">
                     <div class="contact-box">
-                      <h5> Matthis Proud, Account Execitive</h5>
-                      <i> 48 cases comparable cases </i>
+                      <h5> Yasa Mama, Account Execitive</h5>
+                      <i> #48 cases comparable cases </i>
                       <table>
                         <tr >
                           <td>Phone</td>
-                          <td> <a id="call-action">+49 15770362155</a></td>
+                          <td> <a id="call-action" class="classic-href">+49 15770362155</a></td>
                         </tr>
                         <tr>
                           <td>Mail</td>
-                          <td> <a id="mail-action"> matthis.proud@global-product.com</a></td>
+                          <td> <a id="mail-action" class="classic-href" > yasa.mama@tc-technologies.com</a></td>
                         </tr>
                         <tr>
                           <td>Skype:</td>
-                          <td> proud_matthis </td>
+                          <td> <a class="classic-href"> mama-yasi </a> </td>
                         </tr>
                       </table>
                     </div>
@@ -153,13 +153,13 @@
             </div>
             <hr>
             <!-- OTHER EXPERTS LONG LIST -->
-            <p class="meta-description-colleague"> Other porential helpfull colleagues</p>
-            <ul>
-              <li> Patrick Three, Account Manager, 38 cases</li>
-              <li> Kaya Maya, Sales specialist, 31 cases </li>
-              <li> Lucifer Rieder, Business Development, 22 cases</li>
-              <li> Marissa Elisabeth, Junior Sales Rep, 21 cases</li>
-              <li> Yasa Mama, Sales Trainee, 15 cases </li>
+            <p class="meta-description-colleague"> 🙋🏻‍ Other potential helpfull colleagues</p>
+            <ul class="list-icon">
+              <li> <a href="#" class="classic-href"> Patrick Three, Account Manager, 38 cases </a> </li>
+              <li> <a href="#" class="classic-href"> Kaya Maya, Sales specialist, 31 cases </a> </li>
+              <li> <a href="#" class="classic-href"> Lucifer Rieder, Business Development, 22 cases </a></li>
+              <li> <a href="#" class="classic-href"> Marissa Elisabeth, Junior Sales Rep, 21 cases </a></li>
+              <li> <a href="#" class="classic-href"> Matthis Pride, Sales Trainee, 15 cases </a></li>
             </ul>
             <button id="colleague-back" class="button-next-steps" type="button" name="button">Back</button>
           </div>
