--- a/Sally_Sales_Chrome/popup.html
+++ b/Sally_Sales_Chrome/popup.html
@@ -18,7 +18,7 @@
     </span>
 
     <!-- START 1st VIEW: START SCREEN  -->
-    <div id="start-screen" class="panel-main content-block_invisible">
+    <div id="start-screen" class="panel-main ">
       <!-- big logo -->
       <div class="logo-wrapper">
         <img id="start-screen-logo" src="/img/logo-star.png" alt="">
@@ -105,19 +105,19 @@
       <!-- buttons  -->
       <div class="button-panel">
         <button type="button" name="button"> Select another case</button>
-        <button id="proceed-analysis-button" type="button" name="button"> Proceed analysis </button>
+        <button id="proceed-analysis-button" type="button" name="button"> Get insights </button>
       </div>
     </div>
     <!-- END 1st VIEW: START SCREEN  -->
 
     <!-- START 2ND VIEW: ANALYSIS SCREEN  -->
-    <div id="analysis-screen" class="panel-main ">
+    <div id="analysis-screen" class="panel-main content-block_invisible">
       <!-- MAIN CONTENT BLOCK -->
       <div class="panel-main__block">
         <!-- header top row with logo -->
         <div class="panel-main__top">
           <a id="analyis-back" href="#"><img src="/img/left-arrow.svg" alt="back"></a>
-          <img class="panel-main__logo" src="/img/logo-white-lok.svg" alt="">
+          <img class="panel-main__logo" src="/img/logo-app.svg" alt="">
           <img src="/img/home.svg" alt="home" height="">
         </div>
         <!--- ANALYSIS--->
@@ -172,7 +172,7 @@
         <!-- FIND A COLLEAGUE add content-block_invisible to add-->
         <div id="content-block-colleague" class="content-block white-box content-block_invisible">
           <div class="icon-headline-block">
-            <img src="/img/tap.svg" class="icon-headline" alt="">
+            <img src="/img/employee.svg" class="icon-headline" alt="">
             <h6> Find Colleagues </h6>
           </div>
           <p class="amount-cases"> These colleagues within your organization have experience taking this step within your configuration </p>
